[setup] Optimize setup.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 /config/database/jdbc/jdbc.properties
 /config/kettle/.kettle/.spoonrc
 /config/kettle/.kettle/kettle.properties
+/config/kettle/.kettle/xulSettings.properties
+/config/kettle/.kettle/shared.xml
+/config/kettle/.kettle/shared.xml.backup
 
 /temp/*
 /download/*
