[config] Set mysql default tinyInt1isBit=false

--- a/config/application.conf.development.dist
+++ b/config/application.conf.development.dist
@@ -1,5 +1,5 @@
 # Database Config
-database.attribute.defaults.mysql = useCursorFetch=true&defaultFetchSize=500&interactiveClient=true&useUnicode=true&characterEncoding=UTF-8&characterSetResults=UTF-8
+database.attribute.defaults.mysql = useCursorFetch=true&defaultFetchSize=500&interactiveClient=true&tinyInt1isBit=false&useUnicode=true&characterEncoding=UTF-8&characterSetResults=UTF-8
 
 database.connection.Example.host = ???
 database.connection.Example.port = 3306
