[feature][library] Add jdbc config file generator.

--- a/config/application.conf.development.dist
+++ b/config/application.conf.development.dist
@@ -1,6 +1,8 @@
 # Database Config
 database.attribute.defaults.mysql = useCursorFetch=true&defaultFetchSize=500&interactiveClient=true&tinyInt1isBit=false&useUnicode=true&characterEncoding=UTF-8&characterSetResults=UTF-8
 
+database.connection.Example.type = sql
+database.connection.Example.driver = mysql
 database.connection.Example.host = ???
 database.connection.Example.port = 3306
 database.connection.Example.database = ???
