[setup] Litte improvements for configuration/installation process.

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,14 @@
-config/application.conf
-config/application.conf.development
-config/database/jdbc/jdbc.properties
-config/kettle/.kettle/.spoonrc
-config/kettle/.kettle/kettle.properties
-config/kettle/.kettle/xulSettings.properties
-config/kettle/.kettle/shared.xml
-config/kettle/.kettle/shared.xml.backup
-config/kettle/.kettle/.languageChoice
+/config/application.conf
+/config/application.conf.development
+/config/database/jdbc/jdbc.properties
+/config/environment.generated.config.sh
+/config/kettle/.kettle/.spoonrc
+/config/kettle/.kettle/kettle.properties
+/config/kettle/.kettle/xulSettings.properties
+/config/kettle/.kettle/shared.xml
+/config/kettle/.kettle/shared.xml.backup
+/config/kettle/.kettle/.languageChoice
 
-temp/*
-download/*
-log/*
+/temp/*
+/download/*
+/log/*
