[setup] Change config structure to default and env specific config file.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 /config/application.conf
-/config/application.conf.development
+/config/application.generated.conf
 /config/database/jdbc/jdbc.properties
 /config/environment.generated.config.sh
 /config/kettle/.kettle/.spoonrc
