[bug] Fix for serverTimezone. Use UTC by default.

--- a/config/application.default.conf
+++ b/config/application.default.conf
@@ -3,4 +3,4 @@ kettle.log.level = Basic
 kettle.memory.max = 4096
 
 # Database Config
-database.attribute.defaults.mysql = useCursorFetch=true&defaultFetchSize=500&interactiveClient=true&tinyInt1isBit=false&useUnicode=true&characterEncoding=UTF-8&characterSetResults=UTF-8
+database.attribute.defaults.mysql = useCursorFetch=true&defaultFetchSize=500&interactiveClient=true&tinyInt1isBit=false&useUnicode=true&characterEncoding=UTF-8&characterSetResults=UTF-8&serverTimezone=UTC
